# judge_server_cpp

./: .dockerignore  .gitignore  5. 最终优化方案.md  AGENTS.md  CMakeLists.txt  Dockerfile  README.md  TODO.md  main.cpp  readme.md  流程框架.md
.github/workflows/: docker-build.yml
checker/: CMakeLists.txt
config/: config.json  test_config.json
dels/: conect3.5_2.md  connect3.5.md  gtp40.md
doc/: client_sockets.md  memPool.drawio  program_flowchart.drawio  readme.md  resultContainer.md  tcp_api.md  testbox.md
doc/drawio/: event_loop.drawio  resultContainer.drawio  testBox.drawio  testPointBox1.drawio
docs/: 2026-01-20-工作进度.md  2026-01-20-文档.md  architecture.md  deployment-linux.md  dev-guide.md  how-function-calls-flow-in-this-project-for-beginners.md  how-one-submission-flows-through-the-system-for-beginners.md  how-to-read-files-one-by-one-for-beginners.md  how-to-read-tests-for-beginners.md  how-to-read-this-project-for-beginners.md  how-to-understand-core-data-structures-for-beginners.md  how-to-understand-old-and-new-code-for-beginners.md  judge-server-src-reading-guide.md  protocol.md  runner-extension.md  testing.md  完整评测的流程.md
docs/superpowers/specs/: 2026-05-12-sjudger-design.md
include/: Logger.h  Popen.h  TcpServer.h  client_sockets.h  judgeInfo.h  judgeThreadPool.h  judge_message.pb.h  memPool.h  minheap.hpp  resultContainer.h  testBox.h  testPoint.h  testPointBox.h  testPointResult.h  testQueue.h  utils.h  workThreadPool.h
include/common/: Config.h  Result.h  SubmissionTypes.h  Types.h
include/dispatch/: JudgeWorkerPool.h  SubmissionNotifier.h  SubmissionQueue.h  SubmissionTask.h
include/judge/: JudgeCore.h
include/legacy/: judgeInfo.h  resultContainer.h  static_loop_queue.h  testBox.h  testPointBox.h  workThreadPool.h
include/net/: ConnectionRegistry.h  ConnectionSlot.h
include/network/: Buffer.h  Connection.h  ConnectionRegistry.h  ConnectionSlot.h  TcpServer.h
include/protocol/: JudgeProtocol.h
include/runner/: CppRunner.h  ILanguageRunner.h  PythonRunner.h  RunnerFactory.h
include/service/: SubmissionService.h
include/store/: ResultStore.h
include/test_process/: RunnerCompat.h
sjudge/: CgroupSupport.cpp  CgroupSupport.h  ChildSetup.cpp  ChildSetup.h  ConfigValidator.cpp  ConfigValidator.h  ExternalSjudgeCompat.cpp  ExternalSjudgeCompat.h  JudgeTypes.h  ParentMonitor.cpp  ParentMonitor.h  Privilege.cpp  Privilege.h  ResultMapper.cpp  ResultMapper.h  SJudger.h  SeccompPolicy.cpp  SeccompPolicy.h  SeccompPolicyStub.cpp  readme.md  sjudge_call.cpp  sjudge_call.h
sjudge/demo_code_for_tutorial/: 01_fork_exec.cpp  02_redirect_io.cpp  03_wait4_usage.cpp  04_realtime_limit.cpp  05_rlimit_memory.cpp  06_mini_judger.cpp  Makefile
sjudge/docs/: README.md  debugging.md  from-scratch-mini-judger.md  low-privilege-user.md  result-mapping.md  seccomp.md  security-boundary.md  tutorial.md
sjudge/tests/: test_judger_ported_cases.cpp
sjudge/tests/test_src/integration/: output_size.c
src/: Buffer.cpp  Logger.cpp  Popen.cpp  TcpServer.cpp  client_sockets.cpp  judgeInfo.cpp  judge_message.pb.cpp  main.cpp  resultContainer.cpp  testBox.cpp  testPointBox.cpp  utils.cpp  utils.h  workThreadPool.cpp
src/common/: Config.cpp  Config.h  Logger.cpp  Logger.h  Timestamp.cpp  utils.cpp  utils.h
src/dispatch/: JudgeWorkerPool.cpp  JudgeWorkerPool.h  SubmissionNotifier.h  SubmissionQueue.cpp  SubmissionQueue.h  SubmissionTask.h
src/judge/: JudgeCore.cpp
src/legacy/: Predeal.cpp  Timestamp.cpp  resultContainer.cpp  testBox.cpp  testBox.h  testPointBox.cpp  testPointBox.h  workThreadPool.cpp
src/net/: ConnectionRegistry.cpp
src/network/: AckBarrier.cpp  AckBarrier.h  Buffer.cpp  ClientSockets.cpp  ClientSockets.h  ConnectionRegistry.cpp  ConnectionRegistry.h  ConnectionSlot.cpp  ConnectionSlot.h  QueryRequestHandler.cpp  QueryRequestHandler.h  ReplyChannel.cpp  ReplyChannel.h  SubmissionEventResponder.cpp  SubmissionEventResponder.h  SubmissionRequestHandler.cpp  SubmissionRequestHandler.h  TcpServer.cpp  TcpServer.h
src/pipeline/: JudgeCore.cpp  ResultStore.cpp  SubmissionService.cpp  SubmissionService.h  SubmissionVerdictReducer.cpp  SubmissionVerdictReducer.h
src/protocol/: JudgeProtocol.cpp  JudgeProtocol.h
src/runner/: CppRunner.cpp  CppRunner.h  ILanguageRunner.h  PythonRunner.cpp  RunnerCompileSupport.cpp  RunnerExecutionSupport.cpp  RunnerFactory.cpp  RunnerFactory.h  RunnerSupport.h
src/service/: SubmissionService.cpp
src/store/: ResultStore.cpp
src/test_process/: Compile.cpp  Predeal.cpp  TestOneSinglePoint.cpp
test/: 2  2.cpp  CMakeLists.txt  main.cpp  send_one_test.cpp  testBox.cpp  testJudgeInfoSerialize.cpp  testMemPool.cpp  test_async_submission_flow.cpp  test_client_sockets_injection.cpp  test_client_sockets_json.cpp  test_config_sjudge_security.cpp  test_connection_registry.cpp  test_core_json.cpp  test_cpp_runner.cpp  test_deTestProblem.cpp  test_format_detection.cpp  test_integration.cpp  test_integration_tcp_cpp_python.cpp  test_json_simple.cpp  test_judgeInfo.cpp  test_judge_core.cpp  test_judge_verdict_reducer.cpp  test_judge_worker_pool.cpp  test_minHeap.cpp  test_protocol_codec.cpp  test_python_runner.cpp  test_query_request_handler.cpp  test_reply_channel.cpp  test_result_store.cpp  test_runner_factory.cpp  test_runner_support_compile.cpp  test_sjudger.cpp  test_sjudger_result_mapper.cpp  test_static_loop  test_static_loop_queue.cpp  test_submission_event_responder.cpp  test_submission_queue.cpp  test_submission_request_handler.cpp  test_submission_service.cpp  (+2 more)
test/nodejs/: README.md  demo.js  package.json  send_async_judge.js  send_one_judge.js  send_one_judge_new.js  test_codec.js  test_codec_new.js
test/nodejs/examples/: batch_tester.js  lib_usage_example.js
test/nodejs/lib/: README.md  cli-util.js  constants.js  data-codec.js  index.js  judge-client.js  judge-connector.js
